Can see ID on page.

--- a/src/CaseStoreBundle/Resources/views/CaseStudy/index.html.twig
+++ b/src/CaseStoreBundle/Resources/views/CaseStudy/index.html.twig
@@ -161,6 +161,10 @@
         </div>
     </div>
 
+    <div class="pull-right">
+        Case Study ID: {{  caseStudy.publicId }}
+    </div>
+
 
 {%  endblock %}
 
