--- a/src/CaseStoreBundle/Resources/views/Output/index.html.twig
+++ b/src/CaseStoreBundle/Resources/views/Output/index.html.twig
@@ -63,4 +63,8 @@
         {%  endif %}
     </ul>
 
+    <div class="pull-right">
+        Output ID: {{  output.publicId }}
+    </div>
+
 {%  endblock %}
