Can link existing case study to Output https://github.com/CaseStore/CaseStore-Core/issues/30

--- a/src/CaseStoreBundle/Resources/views/Output/index.html.twig
+++ b/src/CaseStoreBundle/Resources/views/Output/index.html.twig
@@ -80,6 +80,12 @@
             {%  else %}
                 None.
             {%  endif %}
+
+            {%  if editAccessAllowed %}
+                <div class="pull-right">
+                    <a href="{{  path('case_store_output_link_existing_case_study', { 'projectId':project.publicId, 'outputId':output.publicId }) }}" class="btn btn-warning">Link Existing Case Study</a>
+                </div>
+            {%  endif %}
         </div>
     </div>
 
