--- a/src/CaseStoreBundle/Resources/views/OutputEdit/linkCaseStudy.html.twig
+++ b/src/CaseStoreBundle/Resources/views/OutputEdit/linkCaseStudy.html.twig
@@ -10,7 +10,7 @@
     <ol class="breadcrumb">
         <li><a href="{{ path('case_store_project', { 'projectId':project.publicId }) }}">Project {{  project.title }}</a></li>
         <li><a href="{{  path('case_store_output', { 'projectId':project.publicId, 'outputId':output.publicId }) }}">Output</a></li>
-        <li class="active">Link Existing Case Study</li>
+        <li class="active">Link Case Study</li>
     </ol>
 
     <section class="">
