--- a/src/CaseStoreCaseStudyFieldTypeStringBundle/Resources/views/caseStudyFieldTypeStringSearch.html.twig
+++ b/src/CaseStoreCaseStudyFieldTypeStringBundle/Resources/views/caseStudyFieldTypeStringSearch.html.twig
@@ -1,1 +1,1 @@
-<input type="text" value="{{  fieldSearch.value }}" name="field{{  fieldDefinition.publicId }}">
+<input type="text" value="{%  if fieldSearch %}{{  fieldSearch.value }}{%  endif %}" name="field{{  fieldDefinition.publicId }}">
