HTML page titles closes https://github.com/CaseStore/CaseStore-Core/issues/44

--- a/src/CaseStoreBundle/Resources/views/CaseStudyEdit/linkOutput.html.twig
+++ b/src/CaseStoreBundle/Resources/views/CaseStudyEdit/linkOutput.html.twig
@@ -5,6 +5,10 @@
 
 {% extends 'CaseStoreBundle::base.html.twig' %}
 
+
+{% block title %}Link to Output{% endblock %}
+
+
 {% block main %}
 
     <ol class="breadcrumb">
