--- a/src/CaseStoreBundle/Resources/views/ProjectAdminCaseStudyFieldDefinition/index.html.twig
+++ b/src/CaseStoreBundle/Resources/views/ProjectAdminCaseStudyFieldDefinition/index.html.twig
@@ -6,6 +6,11 @@
 
 {% extends 'CaseStoreBundle::base.html.twig' %}
 
+
+{% block title %}Case Study Field Definition{% endblock %}
+
+
+
 {% block main %}
 
     <ol class="breadcrumb">
