--- a/src/CaseStoreBundle/Resources/views/CaseStudyEdit/editUsers.html.twig
+++ b/src/CaseStoreBundle/Resources/views/CaseStudyEdit/editUsers.html.twig
@@ -5,6 +5,11 @@
 
 {% extends 'CaseStoreBundle::base.html.twig' %}
 
+
+{% block title %}Edit Staff Involved{% endblock %}
+
+
+
 {% block main %}
 
     <ol class="breadcrumb">
