--- a/src/CaseStoreBundle/Resources/views/Output/index.html.twig
+++ b/src/CaseStoreBundle/Resources/views/Output/index.html.twig
@@ -5,6 +5,11 @@
 
 {% extends 'CaseStoreBundle::base.html.twig' %}
 
+
+{% block title %}Output{% endblock %}
+
+
+
 {% block main %}
 
     <ol class="breadcrumb">
