--- a/src/CaseStoreBundle/Resources/views/ProjectAdmin/outputFieldDefinitions.html.twig
+++ b/src/CaseStoreBundle/Resources/views/ProjectAdmin/outputFieldDefinitions.html.twig
@@ -5,6 +5,11 @@
 
 {% extends 'CaseStoreBundle::base.html.twig' %}
 
+
+{% block title %}Output Field Definitions{% endblock %}
+
+
+
 {% block main %}
 
 
