--- a/src/CaseStoreBundle/Resources/views/ProjectAdminOutputFieldDefinitionNew/index.html.twig
+++ b/src/CaseStoreBundle/Resources/views/ProjectAdminOutputFieldDefinitionNew/index.html.twig
@@ -5,6 +5,11 @@
 
 {% extends 'CaseStoreBundle::base.html.twig' %}
 
+
+{% block title %}New Output Field Definition{% endblock %}
+
+
+
 {% block main %}
 
 
