--- a/src/CaseStoreBundle/Resources/views/Project/outputs.html.twig
+++ b/src/CaseStoreBundle/Resources/views/Project/outputs.html.twig
@@ -17,18 +17,37 @@
         <li class="active">Outputs</li>
     </ol>
 
-    <ul>
+
+
+
+    <table class="table table-striped">
+        <thead>
+        <tr>
+            <th>Title</th>
+            <th>Description</th>
+            <th>&nbsp;</th>
+        </tr>
+        </thead>
+        <tbody>
         {%  for output in outputs %}
-            <li>
-                <div>
+            <tr>
+                <td>
                     <a href="{{ path('case_store_output', { 'projectId':project.publicId,'outputId':output.publicId }) }}">{{  output.titleOrPlaceHolder }}</a>
-                </div>
-                <div>
+                </td>
+                <td>
                     {{  output.description | nl2br }}
-                </div>
-            </li>
+                </td>
+                <td>
+                    <a href="{{ path('case_store_output', { 'projectId':project.publicId,'outputId':output.publicId }) }}" class="btn btn-default">View</a>
+                </td>
+            </tr>
+        {%  else %}
+            <tr>
+                <td colspan="3">No Outputs</td>
+            </tr>
         {%  endfor %}
-    </ul>
+        </tbody>
+    </table>
 
 {%  endblock %}
 
