--- a/src/CaseStoreBundle/Resources/views/ProjectAdminCaseStudyFieldDefinition/index.html.twig
+++ b/src/CaseStoreBundle/Resources/views/ProjectAdminCaseStudyFieldDefinition/index.html.twig
@@ -47,12 +47,15 @@
                 <th>ID</th>
                 <th>Title</th>
                 <th>Sort</th>
+                <th>&nbsp;</th>
             </tr>
             {%  for option in options %}
                 <tr>
                     <td>{{  option.publicId }}</td>
                     <td>{{  option.title }}</td>
                     <td>{{  option.sort }}</td>
+                    <td><a href="{{ path('case_store_project_admin_case_study_field_definition_option', { 'projectId':project.publicId,'caseStudyFieldDefinitionId':caseStudyFieldDefinition.publicId, 'optionId':option.publicId }) }}" class="btn btn-default">View</a></td>
+
                 </tr>
             {%  endfor %}
         </table>
