Style buttons, and add link to one breadcrumb

--- a/src/CaseStoreBundle/Resources/views/CaseStudy/newComment.html.twig
+++ b/src/CaseStoreBundle/Resources/views/CaseStudy/newComment.html.twig
@@ -25,7 +25,7 @@
 
             {{ form_rest(form) }}
 
-            <input type="submit" value="Create New Comment" />
+            <input type="submit" value="Create New Comment" class="btn btn-warning" />
 
         </form>
 
