--- a/src/CaseStoreBundle/Resources/views/CaseStudyEdit/editLocations.html.twig
+++ b/src/CaseStoreBundle/Resources/views/CaseStudyEdit/editLocations.html.twig
@@ -25,7 +25,7 @@
             <input type="hidden" name="action" value="add">
             <input type="hidden" name="lat" value="">
             <input type="hidden" name="lng" value="">
-            <input type="submit" value="Add this location">
+            <input type="submit" value="Add this location" class="btn btn-warning">
         </form>
     </div>
 
@@ -33,7 +33,7 @@
         <form action="#" method="post">
             <input type="hidden" name="action" value="remove">
             <input type="hidden" name="id" value="">
-            <input type="submit" value="Remove this location">
+            <input type="submit" value="Remove this location" class="btn btn-warning">
         </form>
     </div>
 
