--- a/src/CaseStoreBundle/Resources/views/CaseStudyEdit/editUsers.html.twig
+++ b/src/CaseStoreBundle/Resources/views/CaseStudyEdit/editUsers.html.twig
@@ -26,14 +26,14 @@
                     <form action="#" method="post">
                         <input type="hidden" name="action" value="remove">
                         <input type="hidden" name="userName" value="{{ user.username }}">
-                        <input type="submit" value="Remove">
+                        <input type="submit" value="Remove" class="btn btn-warning">
                     </form>
                 {%  else %}
 
                     <form action="#" method="post">
                         <input type="hidden" name="action" value="add">
                         <input type="hidden" name="userName" value="{{ user.username }}">
-                        <input type="submit" value="Add">
+                        <input type="submit" value="Add" class="btn btn-warning">
                     </form>
                 {%  endif %}
             </li>
