--- a/src/CaseStoreBundle/Resources/views/CaseStudyNew/index.html.twig
+++ b/src/CaseStoreBundle/Resources/views/CaseStudyNew/index.html.twig
@@ -22,7 +22,7 @@
 
             {{ form_rest(form) }}
 
-            <input type="submit" value="Create New Case Study" />
+            <input type="submit" value="Create New Case Study" class="btn btn-warning"/>
     
         </form>
 
