--- a/src/CaseStoreBundle/Resources/views/OutputEdit/newDocument.html.twig
+++ b/src/CaseStoreBundle/Resources/views/OutputEdit/newDocument.html.twig
@@ -25,7 +25,7 @@
 
             {{ form_rest(form) }}
 
-            <input type="submit" value="Create New Document" />
+            <input type="submit" value="Create New Document" class="btn btn-warning" />
 
         </form>
 
