--- a/src/CaseStoreBundle/Resources/views/OutputNew/index.html.twig
+++ b/src/CaseStoreBundle/Resources/views/OutputNew/index.html.twig
@@ -30,7 +30,7 @@
 
             {{ form_rest(form) }}
 
-            <input type="submit" value="Create New Output" />
+            <input type="submit" value="Create New Output"  class="btn btn-warning"/>
     
         </form>
 
