--- a/src/CaseStoreBundle/Resources/views/ProjectAdminCaseStudyFieldDefinitionNew/index.html.twig
+++ b/src/CaseStoreBundle/Resources/views/ProjectAdminCaseStudyFieldDefinitionNew/index.html.twig
@@ -31,7 +31,7 @@
 
             {{ form_rest(form) }}
 
-            <input type="submit" value="Create New Case Study Field Definition" />
+            <input type="submit" value="Create New Case Study Field Definition"  class="btn btn-warning"/>
     
         </form>
 
