--- a/src/CaseStoreBundle/Resources/views/CaseStudyEdit/editField.html.twig
+++ b/src/CaseStoreBundle/Resources/views/CaseStudyEdit/editField.html.twig
@@ -26,7 +26,7 @@
 
             {{ form_rest(form) }}
 
-            <input type="submit" value="Save" />
+            <input type="submit" value="Save"  class="btn btn-warning" />
 
         </form>
 
