--- a/src/CaseStoreBundle/Resources/views/ProjectAdminOutputFieldDefinitionNew/index.html.twig
+++ b/src/CaseStoreBundle/Resources/views/ProjectAdminOutputFieldDefinitionNew/index.html.twig
@@ -31,7 +31,7 @@
 
             {{ form_rest(form) }}
 
-            <input type="submit" value="Create New Output Field Definition" />
+            <input type="submit" value="Create New Output Field Definition"  class="btn btn-warning" />
     
         </form>
 
