Work on One single Case Study edit form for all fields https://github.com/CaseStore/CaseStore-Core/issues/52

--- a/src/CaseStoreBundle/Resources/views/CaseStudy/index.html.twig
+++ b/src/CaseStoreBundle/Resources/views/CaseStudy/index.html.twig
@@ -17,6 +17,12 @@
         <li class="active">Case Study</li>
     </ol>
 
+    {%  if editAccessAllowed %}
+        <form method="get" action="{{ path('case_store_case_study_edit', { 'projectId':project.publicId, 'caseStudyId':caseStudy.publicId }) }}" class="pull-right">
+            <input type="submit" class="btn btn-warning" value="Edit">
+        </form>
+    {%  endif %}
+
     <h1>Case Study</h1>
 
     {%  for fieldDefinition in fieldDefinitions %}
