--- a/src/CaseStoreBundle/Resources/views/Project/map.html.twig
+++ b/src/CaseStoreBundle/Resources/views/Project/map.html.twig
@@ -18,9 +18,13 @@
     </ol>
 
 
-
     <div id="Map" style="width: 100%; height: 400px;"></div>
 
+
+    <form onsubmit="goToPostcode(); return false;">
+        Postcode: <input type="text" id="PostCode">
+        <input type="submit" value="Go to">
+    </form>
 
 
 {%  endblock %}
@@ -49,6 +53,16 @@
                 });
 
         });
+
+        function goToPostcode() {
+            $.ajax({url: '/data/postcode/' + encodeURIComponent($('#PostCode').val()) })
+            .done(function(data) {
+
+                if (data.result) {
+                    mapObject.setView([data.lat, data.lng], 16);
+                }
+            });
+        }
     </script>
 {% endblock %}
 
