--- a/src/CaseStoreBundle/Resources/views/Project/map.html.twig
+++ b/src/CaseStoreBundle/Resources/views/Project/map.html.twig
@@ -41,11 +41,9 @@
 
                     mapObject = L.map('Map').setView([57.04199, -3.55957], 6);
 
-                    var mapquestUrl = 'http://{s}.mqcdn.com/tiles/1.0.0/osm/{z}/{x}/{y}.png',
-                            subDomains = ['otile1','otile2','otile3','otile4'],
-                            mapquestAttrib = 'Data, imagery and map information provided by <a href="http://open.mapquest.co.uk" target="_blank">MapQuest</a>, '+
-                                    '<a href="http://www.openstreetmap.org/" target="_blank">OpenStreetMap</a> and contributors';
-                    L.tileLayer(mapquestUrl, {maxZoom: 18, attribution: mapquestAttrib, subdomains: subDomains}).addTo(mapObject);
+                    L.tileLayer('http://{s}.tile.osm.org/{z}/{x}/{y}.png', {
+                        attribution: '&copy; <a href="http://osm.org/copyright">OpenStreetMap</a> contributors'
+                    }).addTo(mapObject);
 
                     for (idx in data.data) {
                         L.marker([ data.data[idx].lat, data.data[idx].lng]).addTo(mapObject).bindPopup('<a href="'+data.data[idx].url+'">'+ $('<div/>').text(data.data[idx].title).html() +'</a>');
