--- a/src/CaseStoreBundle/Resources/views/Project/map.html.twig
+++ b/src/CaseStoreBundle/Resources/views/Project/map.html.twig
@@ -21,29 +21,24 @@
     <div id="Map" style="width: 100%; height: 400px;"></div>
 
 
-    <form onsubmit="goToPostcode(); return false;">
-        Postcode: <input type="text" id="PostCode">
-        <input type="submit" value="Go to">
-    </form>
+    {% include  'CaseStoreBundle:Common:mapSearchBar.html.twig' %}
 
 
 {%  endblock %}
 
 
 {% block javascript %}
+    {% javascripts '@CaseStoreBundle/Resources/public/js/mapLibraries.js' %}
+    <script src="{{ asset_url }}"></script>
+    {% endjavascripts %}
     <script>
-        var mapObject;
 
         $( document ).ready(function() {
 
             $.ajax({url: '{{ path('case_store_project_map_data_json', { 'projectId':project.publicId }) }}'})
                 .done(function(data) {
 
-                    mapObject = L.map('Map').setView([57.04199, -3.55957], 6);
-
-                    L.tileLayer('http://{s}.tile.osm.org/{z}/{x}/{y}.png', {
-                        attribution: '&copy; <a href="http://osm.org/copyright">OpenStreetMap</a> contributors'
-                    }).addTo(mapObject);
+                    startMap('Map');
 
                     for (idx in data.data) {
                         L.marker([ data.data[idx].lat, data.data[idx].lng]).addTo(mapObject).bindPopup('<a href="'+data.data[idx].url+'">'+ $('<div/>').text(data.data[idx].title).html() +'</a>');
@@ -51,16 +46,6 @@
                 });
 
         });
-
-        function goToPostcode() {
-            $.ajax({url: '/data/postcode/' + encodeURIComponent($('#PostCode').val()) })
-            .done(function(data) {
-
-                if (data.result) {
-                    mapObject.setView([data.lat, data.lng], 16);
-                }
-            });
-        }
     </script>
 {% endblock %}
 
