postcode search - loading indicator and message if not found closes https://github.com/CaseStore/CaseStore-Core/issues/54

--- a/src/CaseStoreBundle/Resources/views/Common/mapSearchBar.html.twig
+++ b/src/CaseStoreBundle/Resources/views/Common/mapSearchBar.html.twig
@@ -6,5 +6,7 @@
 <form onsubmit="goToPostcode(); return false;">
     Postcode: <input type="text" id="PostCode">
     <input type="submit" value="Go to">
+    <div id="PostCodeSearchLoading" style="display: none;">Loading</div>
+    <div id="PostCodeSearchMessage" style="display: none;"></div>
 </form>
 
