--- a/src/CaseStoreBundle/Resources/views/Common/mapSearchBar.html.twig
+++ b/src/CaseStoreBundle/Resources/views/Common/mapSearchBar.html.twig
@@ -3,10 +3,12 @@
 # @link https://github.com/CaseStore/CaseStore-Core
 #}
 
-<form onsubmit="goToPostcode(); return false;">
-    Postcode: <input type="text" id="PostCode">
-    <input type="submit" value="Go to">
-    <div id="PostCodeSearchLoading" style="display: none;">Loading</div>
-    <div id="PostCodeSearchMessage" style="display: none;"></div>
-</form>
+<div class="well">
+    <form onsubmit="goToPostcode(); return false;">
+        Postcode: <input type="text" id="PostCode">
+        <input type="submit" value="Go to">
+        <div id="PostCodeSearchLoading" style="display: none;">Loading</div>
+        <div id="PostCodeSearchMessage" style="display: none;"></div>
+    </form>
+</div>
 
