--- a/src/CaseStoreBundle/Resources/views/CaseStudy/index.html.twig
+++ b/src/CaseStoreBundle/Resources/views/CaseStudy/index.html.twig
@@ -181,6 +181,9 @@
 
 {% block javascript %}
     {%  if locations %}
+        {% javascripts '@CaseStoreBundle/Resources/public/js/mapLibraries.js' %}
+        <script src="{{ asset_url }}"></script>
+        {% endjavascripts %}
         <script>
             var mapObject;
             var mapData = [];
@@ -189,13 +192,7 @@
             {%  endfor %}
 
             $( document ).ready(function() {
-                mapObject = L.map('Map', { scrollWheelZoom: false }).setView([57.04199, -3.55957], 6);
-
-                var mapquestUrl = 'http://{s}.mqcdn.com/tiles/1.0.0/osm/{z}/{x}/{y}.png',
-                        subDomains = ['otile1','otile2','otile3','otile4'],
-                        mapquestAttrib = 'Data, imagery and map information provided by <a href="http://open.mapquest.co.uk" target="_blank">MapQuest</a>, '+
-                                '<a href="http://www.openstreetmap.org/" target="_blank">OpenStreetMap</a> and contributors';
-                L.tileLayer(mapquestUrl, {maxZoom: 18, attribution: mapquestAttrib, subdomains: subDomains}).addTo(mapObject);
+                startMap('Map', { scrollWheelZoom: false });
 
                 for (idx in mapData) {
                     L.marker([ mapData[idx].lat, mapData[idx].lng]).addTo(mapObject);
