Default Value on Text fields

--- a/src/CaseStoreBundle/Resources/views/ProjectAdminCaseStudyFieldDefinition/index.html.twig
+++ b/src/CaseStoreBundle/Resources/views/ProjectAdminCaseStudyFieldDefinition/index.html.twig
@@ -39,6 +39,12 @@
     </div>
 
 
+    {%  if caseStudyFieldDefinition.isTypeText %}
+        <div>
+            Default Value: {{  caseStudyFieldDefinition.defaultValue }}
+        </div>
+    {%  endif %}
+
     {%  if caseStudyFieldDefinition.isTypeSelect %}
 
 
