More height on text boxes

--- a/src/CaseStoreBundle/Resources/public/css/main.css
+++ b/src/CaseStoreBundle/Resources/public/css/main.css
@@ -44,3 +44,8 @@ ul.caseStudyCommentList li.caseStudyComment .caseStudyCommentDetails {
     top: 0px;
     padding: 12px;
 }
+
+
+textarea {
+    min-height: 200px;
+}
